[package]
authors = ['Idavoll Network <https://github.com/idavollnetwork>']
description = 'Idavoll Network DAO pallet for defining a DAO management platform.'
edition = '2018'
homepage = 'https://idavoll.network'
license = 'GPL-3.0'
name = 'pallet-idavoll'
repository = 'https://github.com/idavollnetwork/idavoll/'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
serde = { version = '1.0.116', optional = true }

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
serde = '1.0.116'


[features]
default = ['std']
std = [
    'codec/std',
    'serde',
    'frame-support/std',
    'frame-system/std',
]
